[gd_scene load_steps=3 format=3 uid="uid://dcoxgyk10v7ah"]

[ext_resource type="Script" path="res://scripts/windows/download_window.gd" id="1_hjbis"]
[ext_resource type="PackedScene" uid="uid://cylps5fisf5fa" path="res://scenes/windows/draggable_window.tscn" id="1_n67kr"]

[node name="DownloadWindow" instance=ExtResource("1_n67kr")]
script = ExtResource("1_hjbis")

[node name="DownloadProgress" type="ProgressBar" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DownloadButton" type="Button" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Timer" type="Timer" parent="." index="1"]
wait_time = 0.2

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DownloadButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
